nav styling fixed to avoid overlapping

--- a/frontend/src/components/Nav/Nav.css
+++ b/frontend/src/components/Nav/Nav.css
@@ -7,6 +7,8 @@
     width: 10vw;
     height: 100vh;
     position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .nav-container img {
